math-core/tests/snapshots/wiki_test__wiki196.snap
---
source: math-core/tests/wiki_test.rs
expression: "a \\qquad b \\\\ a \\quad b \\\\ a\\ b \\\\ a \\text{ } b \\\\ a\\;b \\\\ a\\,b \\\\ ab \\\\ a b \\\\ \\mathit{ab} \\\\ a\\!b"
---
<math>
    <mi>a</mi>
    <mspace width="2em"/>
    <mi>b</mi>
    <mi>a</mi>
    <mspace width="1em"/>
    <mi>b</mi>
    <mi>a</mi>
    <mtext> </mtext>
    <mi>b</mi>
    <mi>a</mi>
    <mtext> </mtext>
    <mi>b</mi>
    <mi>a</mi>
    <mspace width="0.2777778em"/>
    <mi>b</mi>
    <mi>a</mi>
    <mspace width="0.16666667em"/>
    <mi>b</mi>
    <mi>a</mi>
    <mi>b</mi>
    <mi>a</mi>
    <mi>b</mi>
    <mi>𝑎𝑏</mi>
    <mi>a</mi>
    <mspace width="-0.16666667em"/>
    <mi>b</mi>
</math>
