math-core/tests/snapshots/wiki_test__wiki197.snap
---
source: math-core/tests/wiki_test.rs
expression: "| \\uparrow \\rangle"
---
<math>
    <mi>|</mi>
    <mo stretchy="false">↑</mo>
    <mo stretchy="false">⟩</mo>
</math>
