math-core/tests/snapshots/wiki_test__wiki201.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\wideparen{AB}"
---
<math>
    <mover>
        <mrow>
            <mi>A</mi>
            <mi>B</mi>
        </mrow>
        <mo>⏜</mo>
    </mover>
</math>
