math-core/tests/snapshots/wiki_test__wiki202.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\dddot{x}"
---
<math>
    <mi>𝑥⃛</mi>
</math>
