math-core/tests/snapshots/wiki_test__wiki203.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\sout{q}"
---
<math>
    <menclose notation="horizontalstrike">
        <mi>q</mi>
        <mrow class="menclose-horizontalstrike"></mrow>
    </menclose>
</math>
